ADD: Add usage log for genome index storage.